--- a/schedule.html
+++ b/schedule.html
@@ -4,6 +4,54 @@ title: Schedule
 permalink: /schedule/
 ---
 
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="/fc98/_images/DS_favicon.png">
+
+    <title>Fundamentals of Computer Programming: Schedule</title>
+    <meta name="description" content="Instructor: Sauleh Eetemadi
+    ">
+
+    <link rel="stylesheet" href="/fc98/_css/main.css">
+    <link rel="canonical" href="http://sauleh.github.io/fc98/fc98/schedule/">
+    <link rel="alternate" type="application/rss+xml" title="Iran University of Science and Technology"
+        href="http://sauleh.github.io/fc98/fc98/feed.xml">
+    <link rel="stylesheet" id="open-sans-css"
+        href="//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&amp;subset=latin%2Clatin-ext&amp;ver=4.2.4"
+        type="text/css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic" rel="stylesheet"
+        type="text/css">
+
+
+
+
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-139110197-4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-139110197-4');
+    </script>
+
+
+
+</head>
+
+
 <div class="home">
     <ul class="responsive-table" style="margin-left: 0;">
         <li class="table-header">
@@ -21,6 +69,49 @@ permalink: /schedule/
             {% include schedule_row_{{ event.type }}.html event=event %}
         </li>
         {% endfor %}
+        <li class="table-row table-row-lecture">
+            <div class="col col-1" data-label="Event">Lecture</div>
+            <div class="col col-1-2" data-label="Date">
+                {% comment %} 2020-01-01 03:30:00 +0000
+                <br class="date-spliter">Wednesday {% endcomment %}
+            </div>
+            <div class="col col-2" data-label="Description">
+                01 - intro
+                <div class="schedule-lecture-links">
+                    <div>
+
+
+
+                        
+                        [<a title="Download pdf (pdf)" href="
+    
+      https://drive.iust.ac.ir/index.php/s/Xu0ZXbjx5bsakKV/download?path=%2FCode&amp;files=Lab14.zip 
+    ">pdf</a>]
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="col col-4" data-label="Course Material">
+
+
+
+
+
+            </div>
+        </li>
 
     </ul>
 </div>
+
+</html>
