--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,7 @@ permalink: /schedule/
 
                         [<a title="Download pdf (pdf)" href="
     
-     
+        /_files/01_Intro.pdf
     ">pdf</a>]
 
 
